[project]
name = "energy-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pre-commit>=4.5.1",
    "tabulate>=0.9.0",
    "types-tabulate>=0.9.0.20241207",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]
